[package]
name = "simon-cipher"
version = "0.1.0"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
description = "Simon block cipher algorithm"
documentation = "https://docs.rs/simon-cipher"
repository = "https://github.com/RustCrypto/block-ciphers/tree/master/simon"
readme = "README.md"
edition = "2024"
rust-version = "1.85"
keywords = ["crypto", "simon", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "0.5.0-rc.3"

[dev-dependencies]
cipher = { version = "0.5.0-rc.3", features = ["dev"] }
hex-literal = "1"

[features]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
