[package]
name = "sm4"
version = "0.6.0-rc.3"
description = "SM4 block cipher algorithm"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"
readme = "README.md"
documentation = "https://docs.rs/sm4"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "sm4", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "0.5.0-rc.8"

[dev-dependencies]
cipher = { version = "0.5.0-rc.8", features = ["dev"] }
hex-literal = "1"

[features]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
