[package]
name = "speck-cipher"
version = "0.1.0-rc.3"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
description = "Speck block cipher algorithm"
documentation = "https://docs.rs/speck-cipher"
repository = "https://github.com/RustCrypto/block-ciphers/tree/master/speck"
readme = "README.md"
edition = "2024"
rust-version = "1.85"
keywords = ["crypto", "speck", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "0.5"

[dev-dependencies]
cipher = { version = "0.5", features = ["dev"] }
hex-literal = "1"

[features]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
