[package]
name = "speck-cipher"
version = "0.0.0"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
description = "Speck block cipher algorithm"
documentation = "https://docs.rs/speck"
repository = "https://github.com/RustCrypto/block-ciphers/tree/master/speck"
readme = "README.md"
edition = "2021"
rust-version = "1.65"
keywords = ["crypto", "speck", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "=0.5.0-pre.7"

[dev-dependencies]
cipher = { version = "=0.5.0-pre.7", features = ["dev"] }
hex-literal = "0.4"

[features]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
