[package]
name = "threefish"
version = "0.5.2"
description = "Threefish block cipher"
authors = ["The Rust-Crypto Project Developers"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"
readme = "README.md"
documentation = "https://docs.rs/threefish"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "threefish", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = { version = "0.4.2", optional = true }
zeroize = { version = "1.6", optional = true, default-features = false }

[dev-dependencies]
cipher = { version = "0.4.2", features = ["dev"]}
hex-literal = "0.3.3"

[features]
default = ["cipher"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
