[package]
name = "twofish"
version = "0.3.0-pre"
description = "Twofish block cipher"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
documentation = "https://docs.rs/twofish"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "twofish", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
byteorder = { version = "1", default-features = false }
cipher = "0.2"
opaque-debug = "0.3"

[dev-dependencies]
cipher = { version = "0.2", features = ["dev"] }
hex-literal = "0.2"
